--- a/app/background.html
+++ b/app/background.html
@@ -7,6 +7,7 @@
     <script src="./globalthis.js" type="text/javascript" charset="utf-8"></script>
     <script src="./sentry-install.js" type="text/javascript" charset="utf-8"></script>
     <script src="./runtime-lavamoat.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./policy-load.js" type="text/javascript" charset="utf-8"></script>
     {{@each(it.jsBundles) => val}}
     <script src="{{val}}" type="text/javascript" charset="utf-8"></script>
     {{/each}}
